--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,14 @@
-# See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
+# See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # Compiled output
 /dist
 /tmp
 /out-tsc
+# Only exists if Bazel was run
 /bazel-out
 
-# Node
+# Dependencies
 /node_modules
-npm-debug.log
-yarn-error.log
 
 # IDEs and editors
 .idea/
@@ -18,24 +17,27 @@ yarn-error.log
 .c9/
 *.launch
 .settings/
+xcuserdata/
 *.sublime-workspace
 
-# Visual Studio Code
+# IDE - VSCode
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-.history/*
+*.code-workspace
 
-# Miscellaneous
-/.angular/cache
-.sass-cache/
-/connect.lock
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Other
+.cache
+.angular/cache
 /coverage
-/libpeerconnection.log
-testem.log
-/typings
+/browser
 
 # System files
 .DS_Store
