--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "build:prod": "ng build --configuration production",
-    "build:github": "ng build --configuration production --base-href /Angular-webshop/",
+    "build:github": "ng build --configuration production --base-href /Digital-shopping/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "e2e": "ng e2e",
